# Compliance_Checking4Intern

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  PROJECT_MANUAL.md  README.md  dedup_output.txt  demo_app.py  dev-setup.sh  docker-compose.yml  dockerfile  nginx.conf  pyproject.toml  requirements.txt  thesis_defense_presentation.html
.devcontainer/: devcontainer.json  docker-compose.yml  dockerfile
cache/: llm_cache.db
config/: gdpr.yaml
core/: mcp_server.py
db/: connection.py  rdf_converter.py  schema.sql  seed.py
docs/: LLM_CITATIONS.md
evaluation/: align.py  binary_eval_full_d1.py  binary_review_flagged_sentences.json  confidence_intervals.py  eval_config.py  external_annotator_agreement.py  intra_annotator.py  multi_llm_agreement.py  per_rule_eval.py  portability_experiment.py  report.py
langgraph_agent/: run.py  state.py
latex/: 05-results.tex  thesis_presentation.tex
research/: annotation_codebook.md  baseline_results.json  classification_v2_results.json  deduplication_stats.json  direct_nl_shacl_report.md  direct_nl_shacl_results.json  error_analysis_full_results.json  error_analysis_v2_results.json  extracted_rules.json  extracted_rules_deduplicated.json  extracted_rules_review.md  extraction_metrics.json  extraction_validation_report.md  final_evaluation_report.md  fol_formalization_report.md  fol_formalization_v2_report.md  fol_formalization_v2_results.json  fol_formalization_v4_report.md  fol_formalization_v4_results.json  gold_standard_annotated.json  gold_standard_annotated_v2.json  gold_standard_annotated_v3.json  gold_standard_annotated_v4_backup_20260309_145456.json  gold_standard_template.json  ground_truth_sample.json  inter_rater_reliability_report.md  irr_metrics.json  manual_recovery_analysis.md  model_comparison_report.md  model_comparison_results.json  pattern_analysis_results.json  pattern_taxonomy_report.md  permission_experiments_results.json  shacl_translation_refined_report.md  shacl_translation_report.md  shacl_translation_v4_report.md  (+2 more)
scripts/: llm_cache.py  (+23 more)
(+142 files in other folders)
