[project]
name = "AITGPT-compliance-checking"
version = "0.1.0"
description = "Automated policy formalization pipeline: PDF → FOL → SHACL"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Web / API (app.py uses FastAPI — NOT Flask, which was in requirements.txt by mistake)
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",

    # LangGraph agentic pipeline
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",

    # LLM HTTP calls (mcp_server.py, report_node.py)
    "requests>=2.31.0",

    # PDF processing (extract.py)
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",

    # RDF / SHACL (shacl.py, validate.py, align.py)
    "rdflib>=7.0.0",
    "pyshacl>=0.25.0",

    # Database (connection.py, rdf_converter.py)
    "psycopg2-binary>=2.9.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",   # used in classify.py, fol.py, reclassify.py, direct_shacl.py
]

[dependency-groups]
# Team convention: dev group for tooling
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

# Optional: spaCy sentence extractor (only needed when EXTRACT_SPACY=1)
spacy = [
    "spacy>=3.7.0",
]

# Optional: evaluation metrics (align.py — heavy deps, not needed for pipeline)
eval = [
    "sentence-transformers>=2.7.0",
    "scikit-learn>=1.4.0",
    "rapidfuzz>=3.9.0",
]

[tool.uv]
package = true   # team convention

[project.scripts]
policy-checker = "langgraph_agent.run:main"
policy-mcp     = "policy_checker.core.mcp_server:run_mcp_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/policy_checker", "models/langgraph_agent"]

[tool.mypy]
mypy_path = ["src", "models"]
ignore_missing_imports = true